syntax = "proto3";

option java_multiple_files = true;
option java_package = "vk.itmo.teamgray.sharded.storage.node.node";

package vk.itmo.teamgray.sharded.storage;

import "common.proto";

service NodeNodeService {
  rpc SendShards (SendShardsRequest) returns (StatusResponse);

  rpc SendShardFragment (SendShardFragmentRequest) returns (StatusResponse);
}

message SendShardsRequest {
  repeated SendShard shards = 1;
  // TODO Move this to server init on addServer.
  int32 fullShardCount = 2;
}

message SendShard {
  int32 shardId = 1;
  map<string, string> shard = 2;
}

message SendShardFragmentRequest {
  int32 shardId = 1;
  map<string, string> shardFragments = 2;
}
